--- a/beets-config.yaml
+++ b/beets-config.yaml
@@ -1,6 +1,6 @@
 directory: ~/Dropbox/Media/Music
 library: ~/Dropbox/Media/Music/beet-library.db
-plugins: convert alternatives copyartifacts
+plugins: convert copyartifacts
 convert:
   copy_album_art: yes
   never_convert_lossy_files: yes
@@ -11,12 +11,6 @@ convert:
     mobile:
       command: ffmpeg -i $source -y -vn -ab 320k -ar 44100 $dest
       extension: mp3
-alternatives:
-  cloudplayer:
-    directory: ../../Apps/CloudPlayer
-    formats: mobile AAC aac mp3
-    query: ""
-    removable: true
 copyartifacts:
     extensions: .pdf .jpg .png
     print_ignored: yes
