--- a/projects/collect/Brewfile
+++ b/projects/collect/Brewfile
@@ -11,3 +11,4 @@ cask "android-studio"
 cask "libreoffice" # for creating/editing XLSForms
 cask "google-cloud-sdk"
 cask "imageoptim" # for optimizing screenshots
+cask "intellij-idea-ce"
