--- a/beets/beets-config.yaml
+++ b/beets/beets-config.yaml
@@ -1,6 +1,7 @@
 directory: /home/beets/music
 library: /home/beets/music/beet-library.db
 plugins: convert extrafiles
+asciify_paths: yes
 convert:
   copy_album_art: yes
   never_convert_lossy_files: yes
