--- a/beets/beets-config.yaml
+++ b/beets/beets-config.yaml
@@ -2,6 +2,7 @@ directory: /home/beets/music
 library: /home/beets/music/beet-library.db
 plugins: convert extrafiles
 asciify_paths: yes
+format_item: $artist - $album - $title ($format $bitrate $samplerate $bitdepth)
 convert:
   copy_album_art: yes
   never_convert_lossy_files: yes
