--- a/homeserver/Brewfile
+++ b/homeserver/Brewfile
@@ -1,4 +1,5 @@
 tap "homebrew/bundle"
+tap "seadowg/checkin"
 
 brew "icecast"
 brew "rclone"
@@ -6,3 +7,4 @@ cask "butt"
 cask "plex-media-server"
 cask "plexamp"
 cask "docker"
+brew "checkin"
