Add script for decoding QR codes

--- a/macbook/projects/collect/Brewfile
+++ b/macbook/projects/collect/Brewfile
@@ -4,6 +4,8 @@ brew "circleci"
 brew "git-lfs"
 brew "gh"
 brew "gradle-completion"
+brew "base64"
+brew "qpdf"
 
 cask "slack"
 cask "android-studio"
