--- a/macbook/services/Send to Supernote.workflow/Contents/Info.plist
+++ b/macbook/services/Send to Supernote.workflow/Contents/Info.plist
@@ -8,7 +8,7 @@
 			<key>NSBackgroundColorName</key>
 			<string>background</string>
 			<key>NSIconName</key>
-			<string>NSTouchBariCloud</string>
+			<string>NSTouchBarSend</string>
 			<key>NSMenuItem</key>
 			<dict>
 				<key>default</key>
