--- a/macbook/Brewfile
+++ b/macbook/Brewfile
@@ -13,6 +13,7 @@ mas "Hand Mirror", id: 1502839586
 brew "rclone"
 cask "todoist"
 cask "firefox"
+cask "netnewswire"
 
 # Work
 mas "Toggl Track: Hours & Time Log", id: 1291898086
@@ -22,7 +23,7 @@ brew "bash-completion"
 brew "git"
 brew "gti"
 brew "direnv"
-cask "zed"
+cask "nova"
 cask "iterm2"
 cask "docker"
 cask "gpg-suite"
