--- a/homeserver/beets-docker/Dockerfile
+++ b/homeserver/beets-docker/Dockerfile
@@ -6,6 +6,7 @@ RUN adduser beets
 USER beets
 RUN pip install --user beets
 RUN pip install --user beets-extrafiles
+RUN pip install --user typing_extensions
 COPY beets-config.yaml /home/beets/.config/beets/config.yaml
 
 ENV PATH="$PATH:~/.local/bin/"
