--- a/homeserver/beets-docker/beets-config.yaml
+++ b/homeserver/beets-docker/beets-config.yaml
@@ -1,6 +1,6 @@
 directory: /home/beets/music
 library: /home/beets/music/beet-library.db
-plugins: convert extrafiles info
+plugins: convert extrafiles info musicbrainz
 asciify_paths: yes
 format_item: $artist - $album - $title ($format $bitrate $samplerate $bitdepth)
 convert:
