Ignore music brainz comment

--- a/homeserver/navidrome.toml
+++ b/homeserver/navidrome.toml
@@ -1,2 +1,3 @@
 MusicFolder = '/Users/nexus/Mounts/Music'
 DataFolder = '/Users/nexus/.config/navidrome'
+Tags.musicbrainz_albumcomment.Ignore = true
