Change album version aliases

--- a/homeserver/navidrome.toml
+++ b/homeserver/navidrome.toml
@@ -1,3 +1,4 @@
 MusicFolder = '/Users/nexus/Mounts/Music'
 DataFolder = '/Users/nexus/.config/navidrome'
-Tags.musicbrainz_albumcomment.Ignore = true
+
+Tags.AlbumVersion.Aliases = ["version"]
