Ignore comment tag

--- a/homeserver/navidrome.toml
+++ b/homeserver/navidrome.toml
@@ -2,3 +2,4 @@ MusicFolder = '/Users/nexus/Mounts/Music'
 DataFolder = '/Users/nexus/.config/navidrome'
 
 Tags.AlbumVersion.Aliases = ["version"]
+Tags.Comment.Ignore = true
